<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PixemActivity!</string>
    <string name="app_name">Pixem</string>
    <string name="load">Load Image</string>
    <string name="picture">Take Picture</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="filters">Filters</string>
    <string name="borders">Borders</string>
    <string name="gallery">Gallery</string>
    
    <!-- facebook -->
    <string name="request">Request!</string>
    <string name="upload">Upload Photo</string>
    <string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
</resources>
