<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/loadImageButton"
            style="@style/btn_default_style"
            android:layout_width="162dp"
            android:layout_height="65dp"
            android:text="@string/load" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/takePictureButton"
            style="@style/btn_default_style"
            android:layout_width="162dp"
            android:layout_height="65dp"
            android:text="@string/picture" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/shareButton"
            style="@style/btn_default_style"
            android:layout_width="162dp"
            android:layout_height="65dp"
            android:text="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/effectsBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnGallery"
            style="@style/btn_default_style"
            android:layout_width="162dp"
            android:layout_height="65dp"
            android:text="@string/gallery" />
    </LinearLayout>

</LinearLayout>