<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                style="@style/top_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/header_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/app_name"
                    android:textSize="20dp" />

                
                <ImageButton
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/save" 
                    android:src="@drawable/save_floppy" />

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgMainImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/layoutEffects"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/black" >

            <Button
                android:id="@+id/btnFilters"
                style="@style/btn_default_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:text="@string/filters" />

            <Button
                android:id="@+id/btnBorders"
                style="@style/btn_default_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:text="@string/borders" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>